# DibuGan

./: README.md
procesamientoImagenes/: blur_img.py  bordes_rostros_detallado.py  cargar_datos.py  distorsion.py  model.py  preparar_imagenes_rostros.py  pyproject.toml  test_model.py
